Fixed some accessibility issues and added a favicon. Hopefully this doesn't break the one-weekend rule

--- a/client/src/css/Start.module.css
+++ b/client/src/css/Start.module.css
@@ -74,7 +74,7 @@ input[type=number] {
   margin:10px;
   font-size:1.1rem;
   padding:15px 35px;
-  background-color:rgb(233, 140, 64);
+  background-color:#312c28;
   color:white;
   border-radius:10px;
   box-shadow:1px -1px 1px 1px rgba(34, 30, 27, 0.13);
